[package]
name = "apalis-postgres"
version = "1.0.0-alpha.1"
authors = ["Njuguna Mureithi <mureithinjuguna@gmail.com>"]
edition = "2024"
repository = "https://github.com/apalis-dev/apalis-postgres"
license = "MIT"
description = "Background task processing for rust using apalis and postgres"

[features]
default = ["migrate"]
migrate = ["sqlx/migrate", "sqlx/macros"]
async-std-comp = ["async-std", "sqlx/runtime-async-std-rustls"]
async-std-comp-native-tls = ["async-std", "sqlx/runtime-async-std-native-tls"]
tokio-comp = ["tokio", "sqlx/runtime-tokio-rustls"]
tokio-comp-native-tls = ["tokio", "sqlx/runtime-tokio-native-tls"]

[dependencies]
apalis-core = { version = "1.0.0-alpha.5", default-features = false, features = [
  "sleep",
  "json",
] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
pin-project = "1.1.10"
serde_json = "1"
futures = "0.3.30"

tokio = { version = "1", features = ["rt", "net"], optional = true }
async-std = { version = "1.13.0", optional = true }
ulid = { version = "1" }

[dependencies.sqlx]
version = "0.8.1"
default-features = false
features = ["chrono", "postgres", "json"]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
once_cell = "1.19.0"
apalis-core = { version = "1.0.0-alpha.5", features = ["test-utils"] }
