[package]
name = "apalis-postgres"
version = "1.0.0-rc.1"
authors = ["Njuguna Mureithi <mureithinjuguna@gmail.com>"]
edition = "2024"
repository = "https://github.com/apalis-dev/apalis-postgres"
license-file = "LICENSE"
description = "Background task processing for rust using apalis and postgres"
readme = "README.md"
homepage = "https://github.com/apalis-dev/apalis-postgres"
documentation = "https://docs.rs/apalis-postgres"
keywords = ["apalis", "postgres", "jobs", "queue", "worker"]
categories = ["asynchronous", "database", "network-programming"]
publish = true

[features]
default = ["migrate", "tokio-comp", "chrono"]
migrate = ["sqlx/migrate", "sqlx/macros"]
async-std-comp = ["async-std", "sqlx/runtime-async-std-rustls"]
async-std-comp-native-tls = ["async-std", "sqlx/runtime-async-std-native-tls"]
tokio-comp = ["tokio", "sqlx/runtime-tokio-rustls"]
tokio-comp-native-tls = ["tokio", "sqlx/runtime-tokio-native-tls"]
chrono = ["dep:chrono", "sqlx/chrono"]
time = ["dep:time", "sqlx/time"]

[dependencies]
apalis-core = { path = "../apalis/apalis-core", default-features = false, features = [
  "sleep",
] }
apalis-sql = { path = "../apalis/apalis-sql", default-features = false }
apalis-codec = { version = "0.1.0-rc.1", features = ["json"] }
serde = { version = "1", features = ["derive"], default-features = false }
chrono = { version = "0.4", features = ["serde"], default-features = false, optional = true }
time = { version = "0.3", features = ["serde"], optional = true }
pin-project = "1.1.10"
serde_json = "1"
futures = "0.3.30"
thiserror = "2"
tokio = { version = "1", features = [
  "rt",
  "net",
], optional = true, default-features = false }
async-std = { version = "1.13.0", optional = true, default-features = false }
ulid = { version = "1", features = ["serde"] }


[dependencies.sqlx]
version = "0.8.1"
default-features = false
features = ["postgres", "json"]

[package.metadata.cargo-udeps.ignore]
# When both chrono and time features are enabled, time takes precedence
# so chrono appears unused. This is expected behavior for --all-features.
normal = ["chrono"]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
once_cell = "1.19.0"
apalis = { version = "1.0.0-rc.1" }
apalis-workflow = { version = "0.1.0-rc.1" }
futures-util = "0.3.30"

